--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -1,51 +1,51 @@
 
-Liburu hau programatzen ikasteko gida bat da. Horretarako, ahalik eta tresnarik sinpleenak erabiltzen ditu, Python bezalako hizkuntza erraz eta erabilgarria eta programak lehen kapitulutik idazten hasteko aukera. Errazenetik hasi eta pixkanaka teknika berriak sartzen dira.
-Baina zerbait argi izan behar duzu. Irakurtzera mugatzen bazara, baliteke ideiaren batekin geratzea, baina** ez duzu ikasiko** benetan programatzen. Pro bihurtzeko, ordenagailua aurrean izan behar duzu eta hemen azaltzen dizuguna praktikatu. Proposatutako ariketak egiten, idazten, probatzen eta zure gustura hobetzen saiatu behar duzu. Izan ere,** programatzen ikasten da** programatuz.
+Liburu hau programatzen ikasteko gida bat da. Horretarako, ahalik eta tresnarik sinpleenak erabiltzen ditu, Python bezalako lengoai erraz eta erabilgarria eta programak lehen kapitulutik idazten hasteko aukera. Errazenetik hasi eta pixkanaka teknika berriak sartzen dira.
+Baina zerbait argi izan behar duzu. Irakurtzera mugatzen bazara, baliteke ideiaren batekin geratzea, baina benetan programatzen **ez duzu ikasiko** . Pro batean bihurtzeko, ordenagailua aurrean izan behar duzu eta hemen azaltzen dizuguna praktikatu. Proposatutako ariketak egiten, idazten, probatzen eta zure gustura hobetzen saiatu behar duzu. Izan ere, **programatzen ikasten da** programazioa.
 Liburu hau, ebatzitako ariketak eta web orri bat jartzen ditugu zure eskura. Bertan sartu besterik ez duzu egin behar, eta proposatzen dizkizugun praktikekin jolastu ahal izango duzu.
 
 # Mukientzako programazioa
 
-Ordenagailuak azkarrak dira eta memoria izugarria dute: segundoko milioika jarraibide exekutatzeko eta datu kopuru imajinaezinak kudeatzeko gai diren makinak dira. Baina horrek ez du esan nahi bizkorrak direnik. Berez ez dakite ezer egiten. Ordenagailu bat, edo* tableta* bat, mugikor bat,
-egin zerbait zehatza, programa bat exekutatu behar dute. Eta programa bat programatzaileek idatzitako agindu-multzo bat da.
+Ordenagailuak azkarrak dira eta memoria izugarria dute: segundoko milioika erakigeta exekutatzeko eta datu kopuru imajinaezinak kudeatzeko gai diren makinak dira. Baina horrek ez du esan nahi adimentsuak direnik. Berez ez dakite ezer egiten. Ordenagailu bat, edo *tableta* bat, mugikor bat,
+egin zerbait zehatza, programa bat exekutatu behar dute. Eta programa bat programatzaileek idatzitako agindu multzo bat da.
 
-Programazioaren alderdi interesgarriena da makinaren kontrola har dezakegula, hark guk nahi duguna egin dezan: instrukzio sinple batetik hasi eta nabigatzaile edo joko oso konplexuak programatzeraino. Programazioa lotuta dago, nahi duzuna sor dezakezulako, zure irudimena eta trebetasunak beste mugarik gabe.
+Programazioaren alderdi interesgarriena da makinaren kontrola har dezakegula, hark guk nahi duguna egin dezan: agindu sinple batetik hasi eta nabigatzaile edo joko oso konplexuak programatzeraino. Programazioa zoragarria da, zergatik? nahi duzuna sor dezakezulako, zure irudimena eta trebetasunak beste mugarik gabe.
 
-Baina zein hizkuntzatan komunikatu gaitezke ordenagailuekin? Horietako asko daude. Barnean, ordenagailuak hizkuntza bitarra erabiltzen du, hau da, zerbait egiteko interpretatzeko gai den zeroen sekuentzia. Hala ere, programazio-lana errazteko, hizkuntza sinpleagoak daude, pertsonen hizkuntzaren antz handia dutenak.
+Baina zein hizkuntzatan komunikatu gaitezke ordenagailuekin? Horietako asko daude. Barnean, ordenagailuak lengoai bitarra erabiltzen du, hau da, zerbait egiteko interpretatzeko gai den zero eta bat zenbakien sekuentzia. Hala ere, programazio-lana errazteko, lengoai sinpleagoak daude, pertsonen hizkuntzaren antz handia dutenak.
 
-Python lengoaia horietako bat da, eta bertute asko ditu: erraza da, ikasteko oso erraza, edozer egiteko aukera ematen du, liburu denda ugari ditu eta, gainera, modu profesionalean erabiltzen da. Liburu honetan Python erabiliz programatzen ikasiko duzu. Pixkanaka, hizkuntzak eskaintzen dizkizun tresna berriak ezagutuko dituzu, programa konplexuagoak sortzen ikasteko.
+Python lengoaia horietako bat da, eta alde on asko ditu: erraza da, ikasteko oso erraza, edozer egiteko aukera ematen du, liburutegi ugari ditu eta, gainera, modu profesionalean erabiltzen da. Liburu honetan Python erabiliz programatzen ikasiko duzu. Pixkanaka, lengoaiak eskaintzen dizkizun tresna berriak ezagutuko dituzu, programa konplexuagoak sortzen ikasteko.
 
-Zer behar duzu oraintxe bertan hasteko? Nabigatzaile bat. Lehenengo kapitulutik programatzen hasiko gara. Programatzen ikasteko modurik onena... programatzea da! Ez da beldurrik izan behar, eta, gainera, dibertigarriena da. Beraz, nahikoa da. Pasa hurrengo kapitulura zure lehen programa idazteko!
+Zer behar duzu oraintxe bertan hasteko? Nabigatzaile bat: Chrome, Firefox, etab. Lehenengo kapitulutik programatzen hasiko gara. Programatzen ikasteko modurik onena... programatzea da! Ez da beldurrik izan behar, eta, gainera, dibertigarriena da. Beraz, nahikoa da. Pasa hurrengo kapitulura zure lehen programa idazteko!
 
 Oharra:
-Agian entzuna duzu ordenagailuek adimen artifiziala izan dezaketela edo baliteke
-etsaiak oso bizkorrak diruditen jolasen aurka. Egia esan, ordenagailuak jokabide adimendunak imitatzen dituzten programak exekutatzen ditu.
+Agian entzuna duzu ordenagailuek adimen artifiziala izan dezaketela edo baliteke bideojokoetan etsaiak zu baino azkarragoak iruditzea. Egia esan, ordenagailuak jokabide adimendunak imitatzen dituzten programak exekutatzen ditu.
 
 2. oharra:
-Ohiko programazio-ingurune bat instalatu nahi baduzu, zoaz X eranskinera.
+Ohiko programazio-ingurune bat instalatu nahi baduzu, zoaz eranskinera.
 
-#Ingurunea
+# Programazio ongurunea
+
 Interneterako konexioa duen edozein ordenagailutan sartu:
 
 https://repl.it /
 
 ! [Site de replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/00.png)
 
-Hortik, `Start coding
+Hortik, `Start coding` sakatu
 ! [Start Coding replt.it] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/01.png)
 
-Eta hautatu** Python** lengoaia:
+Eta hautatu **Python** lengoaia:
 
 ! [Python en replt.it hautaketa] (https://raw.githubusercontent.com/pxai/mucos/master/book/images/02.png)
 
-Behin hori eginda, programazio-ingurunea kargatuko da:
+Behin hori eginda, programazio ingurunea kargatuko da:
 
 ! [Replt.it garapen-ingurunea] (https://raw.githubusercontent.com/pxai/mocos/master/book/images/03.png)
 
 - Ezkerrean, programa idazteko editorea duzu.
 - Eskuinean, kontsola, non ikusiko duzun emaitza programa exekutatzen duzunean.
-- Goiko aldean,** Run** botoia, programa nahi beste aldiz exekutatzeko.
+- Goiko aldean, **Run** botoia, programa nahi beste aldiz exekutatzeko.
 
-Repl.it. gunean alta ematea gomendatzen dizugu. Horrela, egiten dituzun programa guztiak gordeta eta lokalizatuta izango dituzu.
+Repl.it. gunean izen ematea gomendatzen dizugu. Horrela, egiten dituzun programa guztiak gordeta eta lokalizatuta izango dituzu.
 
 Online aukerak:
 - https://paiza.io/es
@@ -60,24 +60,24 @@ Honela egiten da:
 print ("Kaixo mundua!")
 ```
 
-Hori frogatzen baduzu, pantailatik horrelako zerbait ikusi beharko zenuke:
+Hori exekutatu edo egikaritzen baduzu (Run), pantailatik horrelako zerbait ikusi beharko zenuke:
 
 ```console
 Kaixo mundua!
 ```
 
-Python lengoaiaren funtzio bat da, mezuak pantailan erakusteko aukera ematen diguna, eta askotan erabiliko dugu mezuak, emaitzak eta abar erakusteko.
+`print` Python lengoaiaren funtzio bat da, mezuak pantailan erakusteko aukera ematen diguna, eta askotan erabiliko dugu mezuak, emaitzak eta abar erakusteko.
 
 KONTUZ! Kapitulu honetakoak bezalako programa oso sinpleetan, saiatu ez jartzen tarterik programaren jarraibideen aurretik, edo Pythonek errore bat emango du:
 
 ```python
-print ("Kaixo mundua!")
+   print ("Kaixo mundua!")
 ```
 
 Oker legoke:
 
 ```console
-print ("Kaixo mundua!")
+  print ("Kaixo mundua!")
 ^
 IndentationError: unexpected indent
 ```
@@ -97,23 +97,17 @@ Emaitza:
 Kaixo, Ada naiz.
 ```
 
-KONTUZ! Python hizkuntzan oso garrantzitsua da lerroaren hasieran tabulaziorik edo espaziorik ez erabiltzea (hurrengo kapituluetan ikusiko ditugun blokeak erabili ezean). Horrek huts egingo luke:
-
-```python
-print ("Kaixo mundua!")
-```
-
 ## Iruzkinak
 
-Programa batean, iruzkinak jar daitezke. Exekutatzen ez den testua da, ordenagailuak erabat ezagutzen ez duena. Zertarako erabiltzen da? Oro har, iruzkinak programaren zati jakin batzuk azaltzeko erabiltzen dira.
+Programa batean, iruzkinak edo komentarioak jar daitezke. Exekutatzen ez den testua da, ordenagailuak erabat ezagutzen ez duena. Zertarako erabiltzen da? Oro har, iruzkinak programaren zati jakin batzuk azaltzeko erabiltzen dira.
 
 ```python
 #Programa honek dio Kaixo
 print ("Kaixo")
 ```
 
-Pythonek ez dio jaramonik egiten iruzkinari, eta "Telefonoa pantailan" erakutsiko du.
-Hainbat lerrori buruzko iruzkinak ere egin daitezke:
+Pythonek ez dio jaramonik egiten iruzkinari, eta kasu honeta pantailatik "Kaixo" erakutsiko du, besterik ez.
+Hainbat lerroko iruzkinak ere egin daitezke:
 
 ```python
 ""
@@ -122,13 +116,13 @@ ADAk sortua
 eta Nekok berrikusia
 ""
 ```
-Batzuetan, iruzkinak aldi baterako erabiltzen dira exekutatzea nahi ez dugun kodearen zati bat "desaktibatzeko".
+Batzutan, iruzkinak aldi baterako erabiltzen dira exekutatzea nahi ez dugun kodearen zati bat "desaktibatzeko".
 
-Oharra: oro har, iruzkinak saihestu behar dituzu. Programatzaile on batek programa ulerterrazak idazten saiatu behar du, inolako iruzkinik behar ez dutenak.
+Oharra: oro har, iruzkinak saihestu behar dituzu. Programatzaile on batek programa ulerterrazak idazten saiatu behar du, inolako iruzkinik edo azalpenik behar ez dutenak.
 
 # Aldagaiak
 
-Aldagaiek datuak gordetzeko balio dute. Ordenagailu-programek, funtsean, arazo bat konpontzeko eta emaitza bat emateko datuak maneiatzen dituzte. Prozesu horretan guztian beharrezkoa da datuak gordetzea, eta horretarako aldagaiak erabiltzen dira. Aldagaiak datu-edukiontziak bezalakoak dira. Kozinatzeko erabiltzen diren edalontziak, platerak eta iturriak bezalakoak dira nolabait: zerbait dute, horrekin lan egiten da, nahastu egiten da, prozesatu egiten da eta emaitza bat lortzen da: zorte pixka batekin zerbait aberatsa lortzen da.
+Aldagaiek datuak gordetzeko balio dute. Ordenagailu programek, funtsean, arazo bat konpontzeko eta emaitza bat emateko datuak maneiatzen dituzte. Prozesu horretan guztian beharrezkoa da datuak gordetzea, eta horretarako aldagaiak erabiltzen dira. Aldagaiak datu edukiontziak bezalakoak dira. Sukaldaritzan erabiltzen diren edalontziak, platerak eta iturriak bezalakoak dira nolabait: zerbait dute, horrekin lan egiten da, nahastu egiten da, prozesatu egiten da eta emaitza bat lortzen da: zorte pixka batekin zerbait goxoa lortzen da.
 
 Python aldagai bat definitzeko, nahikoa da bere izena adieraztea eta balioren bat ematea. Adibidez:
 
@@ -157,7 +151,7 @@ izena = "Neko"
 print (izena)
 ```
 
-Eta pantailan ikusiko dugu:
+Pantailan hurrengoa ikusiko dugu:
 
 ```console
 Ada
@@ -166,7 +160,7 @@ Neko
 
 Oharra:
 Aldagai baten edukia mezuaren zati gisa ere erakuts daiteke.
-Horretarako hainbat aukera daude:
+Horretarako hainbat aukera daude, jarraian ikusiko dugun moduan.
 
 ## Komen bidez bereizi
 
@@ -212,8 +206,8 @@ Aldagai bat baino gehiago erakusteko beste modu bat mezu bat da. Aurretik, "f" l
 ```python
 izena = "Bug"
 adina = 10
-print (f "Kaixo, {izena} dut izena")
-print (f "{izena} naiz {} urte ditut")
+print (f"Kaixo, {izena} dut izena")
+print (f"{izena} naiz {adina} urte ditut")
 ```
 
 Emaitza pantailan:
@@ -227,10 +221,10 @@ KONTUZ, aukera hau Python 3.6tik bakarrik dago eskuragarri
 
 ## Ehunekoa ordeztea
 
-Aldagaiak pantaila bidez erakusteko beste aukera bat. % s elementuak aldagaiekin ordezkatzen dituen mezu bat sortzen da.
+Aldagaiak pantaila bidez erakusteko beste aukera bat. %s elementuak aldagaiekin ordezkatzen dituen mezu bat sortzen da.
 
 ```python
-print ("Kaixo, % s dut izena" % izena)
+print ("Kaixo, %s dut izena" % izena)
 ```
 
 Emaitza pantailan:
@@ -245,7 +239,7 @@ Gauza bera egin dezakezu hainbat aldagairekin
 izena = "Neko"
 adina = 5
 
-print ("Kaixo, % s dut izena eta % d urte ditut" % (izena, adina)
+print ("Kaixo, %s dut izena eta %d urte ditut" % (izena, adina))
 ```
 
 Emaitza pantailan:
@@ -256,11 +250,11 @@ Kaixo, Neko dut izena eta 5 urte ditut.
 
 # Datu-motak
 
-Datuak! Programek lantzen duten lehengaia da. Gure programek eraldatzen duten elementua dira. Programa batek datuak jaso, eraldatu eta emaitza gisa itzultzen ditu. Datuak desberdinak izan daitezke, gure programak egin behar duenaren arabera. Zenbakiak izan daitezke, hitzak edo testuak izan daitezke, baliogabeak edo hutsak ere izan daitezke. Datuak gordetzeko, normalean aldagaiak erabiltzen ditugu.
+Datuak! Programek lantzen duten osagaiak dira. Gure programek eraldatzen duten elementuak dira. Programa batek datuak jaso, eraldatu eta emaitza gisa itzultzen ditu. Datuak desberdinak izan daitezke, gure programak egin behar duenaren arabera. Zenbakiak izan daitezke, hitzak edo testuak izan daitezke, baliogabeak edo hutsak ere izan daitezke. Datuak gordetzeko, normalean aldagaiak erabiltzen ditugu.
 
-Programazioa sukaldaritzarekin alderatzen badugu, orduan azukrea, irina eta arrautzak datuak izango lirateke, ontziak aldakorrak izango lirateke: tarta beste datu bat izango litzateke, emaitza eta errezeta programa izango litzateke.
+Programazioa sukaldaritzarekin alderatzen badugu, orduan azukrea, irina eta arraultzak datuak izango lirateke, ontziak aldakorrak izango lirateke: tarta beste datu bat izango litzateke, emaitza eta errezeta programa izango litzateke.
 
-Nola daki Pythonek zein datu mota darabilen? Ez dago esan beharrik, beste hizkuntza batzuetan bezala. Horregatik da hizkuntza sinpleagoa eta malguagoa. Baina ezin izango dugu nahi duguna egin datuekin.
+Nola daki Pythonek zein datu mota darabilen? Ez dago esan beharrik, beste lengoai batzuetan bezala. Horregatik Python lengoai sinpleagoa eta malguagoa da. Baina ezin izango dugu nahi duguna egin datuekin.
 
 Jarraian, oinarrizko datu motak ikusiko ditugu.
 
@@ -278,7 +272,7 @@ adina = 12
 
 - Hamartarrekin:
 
-Zenbaki hamartarrak, zati osoa eta hamartarra (4.5 edo 3.1415) bereizteko, `.`, erabiltzen dira. Baliteke mateen klasean koma bat erabiltzea hamartarrak bereizteko, baina programazioan ingelesezko formatua erabiltzen da eta `.`, erabili behar dugu.
+Zenbaki hamartarrak, zati osoa eta hamartarra (4.5 edo 3.1415) bereizteko, `.`, erabiltzen dira. Baliteke eskolako matematika klasean koma bat erabiltzea hamartarrak bereizteko, baina programazioan ingelesezko formatua erabiltzen da eta `.`, erabili behar dugu.
 
 ```python
 pisua = 34.67
@@ -296,7 +290,7 @@ tenperaturaMarten = -50.676
 
 ## Testua
 
-Testua, kateak edo* strings* ere deituak, komatxo bikoitz edo sinpleen arteko edozein hitz-multzo da.
+Testua, kateak edo *string* ere deituak, komatxo bikoitz edo sinpleen arteko edozein hizki multzoa da.
 
 ```python
 izena = "Ada"
@@ -305,17 +299,17 @@ hitzak = 'Lanera noa'
 neska = 'Lagunak izatea besterik ez dut nahi'
 ```
 
-Testuaren kasuan, zenbait karaktere berezi sar ditzakegu, ondorio interesgarriak izateko. Karaktere horiek kontra-barra batekin edo* backslash* batekin idazten dira aurretik.
+Testuaren kasuan, zenbait karaktere berezi sar ditzakegu, ondorio interesgarriak izateko. Karaktere horiek kontra-barra batekin edo *backslash* batekin idazten dira aurretik.
 
 - Lerro jauzia
 
-Horrek lerro-jauzi bat gehitzen dio testuari, pantaila bidez erakusten bada:
+Horrek lerro jauzi bat gehitzen dio testuari, pantaila bidez erakusten bada:
 
 ```python
 esaldia = "Kaixo,\n zer moduz"
 ```
 
-honela erakutsiko da:
+Honela erakutsiko da:
 
 ```console
 Kaixo,
@@ -325,17 +319,17 @@ zer moduz
 Hainbat lerrotako testu bat ere defini daiteke:
 
 ```python
-Igande bat zen.
+"""Igande bat zen.
 arratsaldean
 autoetara joan nintzen
-talka "" "
+talka"""
 ```
 
 - Tabulazioak
 Horrek tabulazio bat (hainbat espazio) gehitzen dio testuari, pantaila bidez erakusten bada:
 
 ```python
-esaldia = "Izena\Abizena\Adina"
+esaldia = "Izena\tAbizena\tAdina"
 ```
 honela erakutsiko da:
 
@@ -345,16 +339,14 @@ Izena Abizena Adina
 
 Beste karaktere berezi batzuk:
 
--\\ Testu batean kontra-barra erakusteko.
+-\\ Testu batean kontrabarra erakusteko.
 -\" Komatxo bikoitza erakusteko testu batean.
 -\' Komatxo sinple bat erakusteko testu batean.
 -\a Pitidoa jotzeko.
 
 ## Boolearrak
 
-Boolear motak bi balio posible bakarrik izan ditzake:
-
-Datuak, hau da, egiazkoak edo okerrak. Programazioan funtsezko datua da, erabakiak hartzeko erabiltzen baita.
+Boolear motak bi balio posible bakarrik izan ditzake: `True` ala `False`: egia ala gezurra. Programazioan funtsezko datua da, erabakiak hartzeko erabiltzen baita.
 
 ```python
 amaituta = False
@@ -364,7 +356,7 @@ pythonItzelaDa = True
 
 ## Zerrendak
 
-Zerrendak datu-multzoak dira, eta honela definitzen dira:
+Zerrendak datu multzoak dira, eta honela definitzen dira:
 
 ```python
 lagunak = ["Ada", "Miranda", "Ruby"]
@@ -397,19 +389,19 @@ Aurrerago itzuliko gara zerrendetara eta beste egitura batzuetara.
 
 ## None
 
-Arraroa dirudien arren, programetan batzuetan hutsa, ezereza irudikatzen duen zerbaitekin hitz egin behar izaten da.
-Badago hitz bat Python-en ezereza irudikatzeko aukera ematen diguna, eta hori da:
+Arraroa dirudien arren, programetan batzuetan hutsa edo ezereza irudikatzen duen zerbaitekin hitz egin behar izaten da.
+Badago hitz bat Python-en hutsa irudikatzeko aukera ematen diguna, eta hori da:
 
 ```python
 Hasierako balioa = None
 dato = None
 ```
 
-Egia esan, ez da aldagaiak sortzeko erabiltzen. `Nonoporek balio bat adierazten du egoera berezietan. Adibidez, informazioa fitxategi bat edo erabiltzaileak ematen ez digun datu bat ez dagoen leku batetik atera nahi badugu.
+Egia esan, ez da aldagaiak sortzeko erabiltzen. `None` balio bat adierazten du egoera berezietan. Adibidez, informazioa fitxategi bat edo erabiltzaileak ematen ez digun datu bat ez dagoen leku batetik atera nahi badugu.
 
 0.2 ariketa
 
-Idatzi hemen ikusitako mota bakoitzaren aldagai bat definituko duen programa bat, eta kontsola bidez erakutsiko ditu.
+Idatzi hemen ikusitako mota bakoitzaren aldagai bat definituko duen programa bat, eta kontsola bidez erakutsi:
 
 ```python
 izena = "Ada"
@@ -442,9 +434,9 @@ null
 
 Programa batek zerbait egin ahal izateko, askotan erabiltzaileak datu bat sartu behar du. Adibidez, programa batek gure izenak zenbat letra dituen edo gure urtebetetzerako zenbat falta den esatea nahi badugu, lehenik eta behin datu bat eskatu beharko du programak.
 
-Oraingoz ikusten ari garenak bezalako oinarrizko programek kontsola erabiltzen dute exekutatzeko. Pantaila beltz horietan idatzitako aginduak jartzen dira;)
+Oraingoz ikusten ari garenak bezalako oinarrizko programek kontsola erabiltzen dute exekutatzeko. Pantaila beltz horietan idatzitako aginduak jartzen dira ;)
 
-Erabiltzaileari datu bat eskatu eta aldagai batean gordetzeko, honako funtzio hau erabiltzen da:
+Erabiltzaileari datu bat eskatu eta aldagai batean gordetzeko, honako `input` funtzio hau erabiltzen da:
 
 ```python
 izena = input("Sartu zure izena: ")
@@ -487,7 +479,7 @@ Kaixo, zer moduz zaude Juan?
 
 ## Kontuz datuekin
 
-Erabiltzaileak zerbait idazteko,*** delako funtzioa erabiltzen duzun bakoitzean,*** testu gisa gordeko da. Nahiz eta zenbaki bat idatzi:
+Erabiltzaileak zerbait idazteko, **input funtzioa erabiltzen duzun bakoitzean** testu gisa gordeko da. Nahiz eta zenbaki bat idatzi:
 
 ```python
 balioa = input ("Eman zenbaki bat:")
@@ -495,16 +487,16 @@ bikoitza = balioa + balioa
 print(bikoitza)
 ```
 
-Erabiltzaileak "4" bezalako zenbaki bat sartuz gero, emaitza hau izango litzateke:
+Erabiltzaileak `"4"` bezalako zenbaki bat sartuz gero, emaitza hau izango litzateke:
 
 ```console
 Emadazu zenbaki bat: 4
 44
 ```
 
-`4 + 4` gehitu eta `8` erakutsi beharrean, `4` eta `4` batu egin ditu, izan ere," 4 "testua irakurri duenean," 4 " testua da.
+`4 + 4` gehitu eta `8` erakutsi beharrean, `4` eta `4` batu egin ditu, izan ere, `"4"` testua irakurri duenean," 4 " testua da.
 
-Hori saihesteko, beste funtzio bat erabili behar dugu datu hori zenbaki oso bihurtzeko: `int ()`
+Hori saihesteko, beste funtzio bat erabili behar dugu datu hori zenbaki oso bihurtzeko: `int()`
 
 ```python
 balioa = input ("Eman zenbaki bat:")
@@ -516,7 +508,7 @@ Edo lehenago ere bihur dezakegu:
 
 ```python
 balioa = input ("Eman zenbaki bat:")
-balioa = int (balioa)
+balioa = int(balioa)
 bikoitza = balioa + balioa
 print (bikoitza)
 ```
@@ -524,7 +516,7 @@ print (bikoitza)
 Edo, are gehiago, input egiten den bitartean:
 
 ```python
-balioa = int (input ("Emadazu zenbaki bat:")
+balioa = int(input("Emaidazu zenbaki bat:")
 bikoitza = balioa + balioa
 print (bikoitza)
 ```
@@ -532,7 +524,7 @@ print (bikoitza)
 Orain bai:
 
 ```console
-Emadazu zenbaki bat: 4
+Emaidazu zenbaki bat: 4
 8
 ```
 
@@ -556,7 +548,7 @@ Batura hau da: 42
 
 ## Beste bihurketa batzuk
 
-Hizkuntzan aldagai motak adierazi behar ez baditugu ere, motak (testua, zenbakia, etab.) kontuan hartzen dira programa gauzatzerakoan.
+Python lengoaian aldagai motak adierazi behar ez baditugu ere, motak (testua, zenbakia, etab.) kontuan hartzen dira programa gauzatzerakoan.
 Adibidez, zenbaki bat duen aldagai bat badugu eta testu batean kateatu nahi badugu, errore bat lortuko genuke:
 
 ```python
@@ -570,7 +562,7 @@ Errorea hau izango litzateke:
 TypeError: cannot concatenate 'str' and 'int' objects
 ```
 
-Hori saihesteko, testu-mota behartu behar dugu `str ()» erabiliz:
+Hori saihesteko, testu mota behartu behar dugu `str ()` erabiliz:
 
 ```python
 balioa = 66
@@ -578,16 +570,17 @@ testua = "Nire adina da " + str(balioa)
 ```
 
 Beraz, batzuetan balio bat mota jakin batean bihurtu beharko dugu. Hauek dira bihurtzeko funtzioak:
-- str (): balio bat testu bihurtzen du. · "5" itzuliko luke.
-- int (): balio bat zenbaki oso bihurtzen du.
-- float (): balio bat zenbaki bihurtzen du hamartarrekin.
-- bool (): balio bat boolear batera bihurtzen du. `bool ("False") Itzuli egingo luke.
+
+- `str()`: balio bat testu bihurtzen du. · `"5"` itzuliko luke.
+- `int()`: balio bat zenbaki oso bihurtzen du.
+- `float()`: balio bat zenbakihamartarra  bihurtzen du.
+- `bool()`: balio bat boolear batera bihurtzen du.
 
 KONTUZ! Bateragarria ez den balio bat bihurtzen saiatzen bazara, programak huts egingo du eta bat-batean amaituko da.
 
 # Eragileak
 
-Programek zenbakiekin kalkuluak egin behar dituzte, datuak prozesatu, balioen arabera erabakiak hartu. Horretarako operadoreak behar ditugu.
+Programek zenbakiekin kalkuluak egin behar dituzte, datuak prozesatu, balioen arabera erabakiak hartu. Horretarako operadore edo eragileak behar ditugu.
 
 ## Eragile aritmetikoak
 
@@ -601,10 +594,10 @@ txikleak = txikleak + 2
 Programaren kalkuluen arabera, 4 txikle edukitzetik 6 izatera igaro zara.
 Hauek dira programazioko oinarrizko eragiketak:
 
-- Batuketa: `+
-- Kenketa:
-- Biderketa:
-- Zatiketa:
+- Batuketa: `+`
+- Kenketa: `-`
+- Biderketa: `*`
+- Zatiketa: `/`
 
 Adibidez, egun batek zenbat segundo dituen kalkulatzeko:
 
@@ -616,7 +609,7 @@ orduak = 24
 Segundoak = segundoak * minutuak * orduak
 ```
 
-Behar bezain eragiketa konplexuak egin ditzakezu. Irakurtzeko errazagoak izan daitezen, parentesiak erabil daitezke, mateetan egiten den bezala:
+Behar bezain eragiketa konplexuak egin ditzakezu. Irakurtzeko errazagoak izan daitezen, parentesiak erabil daitezke, matematikan egiten den bezala:
 
 ```python
 ada = 14
@@ -643,7 +636,7 @@ Sartu zenbaki bat: 30
 Kenketa hau da: 25
 ```
 
-##  Modulua eta esponentziala
+##  Modulua eta berreketa
 
 Programazioan oso garrantzitsua den eragiketa bat dago, agian mateetan hain ohikoa ez dena: modulua da. Zatiketaren emaitzaren ordez hondakina itzultzen duen zatiketa da:
 
@@ -654,8 +647,12 @@ emaitza = balioa % 3
 
 Emaitza-balioa hauxe izango da:
 
+```console
+2
+```
 
-Esponentziala zenbaki bat bere kabuz hainbat aldiz biderkatzearen emaitza da. Pythonen operadore honekin egin daiteke eragiketa hori:
+
+Berreketa zenbaki bat bere kabuz hainbat aldiz biderkatzearen emaitza da. Pythonen operadore honekin egin daiteke eragiketa hori:
 
 ```python
 balioa = 2
@@ -664,15 +661,15 @@ emaitza = balioa** 3 #honen baliokidea da: 2* 2* 2
 
 Emaitza `8` izango litzateke.
 
-##  Zeinu-aldaketa
+##  Zeinu aldaketa
 
-Ondo dakizunez, zenbaki batzuk zero baino txikiagoak dira, eta negatibo esaten zaie. Zenbaki horiek aurretik `-u 'batekin adierazten dira:
+Ondo dakizunez, zenbaki batzuk zero baino txikiagoak dira, eta negatibo esaten zaie. Zenbaki horiek aurretik `-` batekin adierazten dira:
 
 ```python
 - 5, -248, -1.87,...
 ```
 
-Zenbaki baten zeinua aldatu nahi badugu, aurretik `-u` bat jar dezakegu:
+Zenbaki baten zeinua aldatu nahi badugu, aurretik `-` bat jar dezakegu:
 
 ```python
 tenperatura = -11
@@ -695,7 +692,7 @@ Horrelako egoeretan, eragile *laburtu* bat erabil dezakezu, eragiketa egin eta a
 
 ```python
 kontagailua = 0
-kontagailua + = 2
+kontagailua += 2
 ```
 
 Gauza bera egin daiteke operadore guztiekin:
@@ -712,7 +709,7 @@ Gauza bera egin daiteke operadore guztiekin:
 
 0.6 ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatu eta handitu egingo duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Ondoren, balioa murriztu behar du eta emaitza kontsola bidez erakutsi. Operadore laburtuak erabili!
+Idatzi erabiltzaileari zenbaki bat eskatu eta inkrementatu (+1) egingo duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Ondoren, balioa dekrementatu (-1) behar du eta emaitza kontsola bidez erakutsi. Operadore laburtuak erabili!
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
@@ -735,31 +732,31 @@ Beherakada 6 da
 
 ## Konparazio eragileak
 
-Balio bat bestearekin alderatzeko aukera ematen diguten eragileak dira. Normalean zenbakiekin erabiltzen da, eta eragiketa horien emaitza `True`edo `False«da.
+Balio bat bestearekin alderatzeko aukera ematen diguten eragileak dira. Normalean zenbakiekin erabiltzen da, eta eragiketa horien emaitza `True` ala `False` da.
 
-Adibidez, balio bat beste baten berdina den egiaztatzeko, operadorea erabiliko dugu.
+Adibidez, balio bat beste baten berdina den egiaztatzeko, `==` operadorea erabiliko dugu.
 
 ```python
 balioa = 5
-emaitza = balioa = = 5
+emaitza = balioa == 5
 ```
 
-Emaitza hauxe izango litzateke: `Trueu.
+Emaitza hauxe izango litzateke: `True`.
 
 Hona hemen konparazio-operadoreak:
 
-- Berdin:
-- Desberdina:
-- Baino handiagoa:
-- Honako hauek baino txikiagoa:
-- Handiagoa edo berdina: `> =
-- Txikia edo berdina:
+- Berdin: `==`
+- Desberdina: `!=`
+- Handiagoa: `>`
+- Txikiagoa: `<`
+- Handiagoa edo berdina: `>=`
+- Txikiago edo berdina: `<=`
 
 Testudun operadore hau ere erabil daiteke berdintasuna egiaztatzeko:
 
 ```python
 izena = "Ada"
-Emaitza = izena = = "Bug"
+Emaitza = izena == "Bug"
 ```
 
 Emaitza hau izango litzateke: `False`.
@@ -770,7 +767,7 @@ izena = "Ada"
 emaitza = "Ada" < "Bug"
 ```
 
-Emaitza hauxe izango litzateke: `Trueu.
+Emaitza hauxe izango litzateke: `True`.
 
 0.7 ariketa
 
@@ -795,18 +792,19 @@ Desberdinak dira? Falsea
 
 ## Eragile boolearrak
 
-Eragile boolearrek aukera ematen digute eragiketak egiteko balio boolearrekin `True`edo `Falseere.
+Eragile boolearrek aukera ematen digute eragiketak egiteko balio boolearrekin `True` ala `False`.
 
 ## and
-Operadore horrek `Trueu 'itzuliko du, baldin eta bi operadoreak ere `Trueu:
+Operadore horrek `True` itzuliko du, baldin eta bi operadoreak ere `True` badira:
 
 ```python
 balioa = 5
 emaitza = (balioa == 5) and True;
 ```
 
-Emaitza hauxe izango litzateke: `Trueu.
-Aukera guztiak laburbiltzeko, horri esaten zaio operadorearen egiaren taula.
+Emaitza hauxe izango litzateke: `True`.
+
+Aukera guztiak laburbiltzeko, **egiaren taula** delakoa honako hau izango litzateke:
 
 | a | | b | emaitza |
 | -- | -- | -- | -- | |
@@ -816,6 +814,7 @@ Aukera guztiak laburbiltzeko, horri esaten zaio operadorearen egiaren taula.
 | `Erresuma | `Txurruna | `Trueu | `Trueu |
 
 0.8 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino handiagoa den eta, gainera, bikoitia den alderatu behar duzu.
 
 ```python
@@ -825,6 +824,7 @@ emaitza = (balioa >= 0) and (balioa % 2 == 0)
 
 print("Bikoitza eta positiboa da?", emaitza)
 ```
+
 Emaitza:
 
 ```console
@@ -833,15 +833,17 @@ Parea eta positiboa da? True
 ```
 
 ## or
-Operadore horrek honako hauek ere itzultzen ditu: `Trueu, baldin eta** edozein**, eta hauek ere bai:
+
+Operadore honek `True` itzuliko du, baldin eta gutxienez bat `True` bada:
 
 ```python
 balioa = 5
-emaitza = (balioa = = 5) or True;
+emaitza = (balioa == 5) or False;
 ```
 
-Emaitza hauxe izango litzateke: `Trueu.
-Aukera guztiak laburbiltzeko, hauxe izango litzateke operadorearen egiaren taula.
+Emaitza hauxe izango litzateke: `True`.
+
+Aukera guztiak laburbiltzeko, hauxe izango litzateke `or` operadorearen egiaren taula.
 
 | a | | b | emaitza |
 | -- | -- | -- | -- | |
@@ -851,6 +853,7 @@ Aukera guztiak laburbiltzeko, hauxe izango litzateke operadorearen egiaren taula
 | `Erresuma | `Ordua | `Txurruna | `Trueu |
 
 0.9 ariketa
+
 Idatzi programa bat erabiltzaileari bi zenbaki eskatzeko eta bietako bat positiboa den egiaztatzeko. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
@@ -870,22 +873,24 @@ Bietako bat positiboa da? True
 ```
 
 ## not
-Operadore horrek kontrako balioa itzultzen du eragiketan. Aplikatzen bazaio, itzuli `Frueere 'ri, eta aplikatzen bazaio, itzuli `Falseere' ri:
+
+Operadore horrek kontrako balioa itzultzen du eragiketan. `True` balio bati aplikatzen bazaio `False` itzuliko du eta alderantziz.
 
 ```python
 balioa = True
 emaitza = not balioa;
 ```
 
-Emaitza hau izango litzateke: `False«.
+Emaitza hau izango litzateke: `False`.
 Aukera guztiak laburbiltzeko, hauxe izango litzateke operadorearen egiaren taula.
 
 | | a | emaitza |
 | -- | -- | -- |
-| `albistea | `Helburua | `False«|
-| `oharra | `Turruna | `Helburua |
+| not|`True` | `False`|
+| not|`False` | `True` |
 
-0.10 ariketa
+0.10 Ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, eta egiaztatu ez dela ez positiboa ez bikoitia.
 
 ```python
@@ -904,7 +909,8 @@ Sartu zenbaki bat: -4
 Ez al da bikoitia eta positiboa? True
 ```
 
-## Operadoreak konbinatzen
+## Operadoreak nahasten
+
 Operadoreak behar adina konbina ditzakegu:
 
 ```python
@@ -918,6 +924,7 @@ Oro har, baldintzapeko eragileak baldintzapeko blokeen, begizten eta abarren bal
 ## Proposatutako ariketak
 
 0.0 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatu eta 7 biderkatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
@@ -935,6 +942,7 @@ Biderketa hau da: 21
 ```
 
 0.1 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatu eta bitan zatikatuko duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
@@ -951,7 +959,7 @@ Banaketa hau da: 30
 ```
 
 0.2 ariketa
-Idatzi erabiltzaileari zenbaki bat eskatu eta 3. modulua egiten duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
+Idatzi erabiltzaileari zenbaki bat eskatu eta . modulua egiten duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
@@ -966,8 +974,10 @@ Emaitza:
 Sartu zenbaki bat: 7
 Modulua hau da: 1
 ```
+
 0.3 ariketa
-Idatzi erabiltzaileari zenbaki bat eskatu eta 2ko esponentziala aplikatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
+
+Idatzi erabiltzaileari zenbaki bat eskatu eta ber 2 (2ko esponentziala) aplikatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
@@ -1019,10 +1029,11 @@ Emaitza
 
 ```console
 Sartu zenbaki bat: 8
-Kemena bikoitia da? True
+Balioa bikoitia da? True
 ```
 
 0.6 ariketa
+
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, zenbaki hori 0 edo handiagoa den egiaztatu behar duzu, hau da, positiboa den.
 
 ```python
