--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -492,7 +492,7 @@ EzAurkitua = hitza.find ("xxx") # -1
 Testu bat nolabait hasten den jakin nahi badugu, `startswith ()» erabil daiteke.
 
 ```python
-hitzak = "Python hizkuntza ona da"
+hitzak = "Python lengoaia ona da"
 hasi = hitza.startswith ("Py") #True
 hasi = hitza.startswith ("es") #False
 ```
@@ -500,7 +500,7 @@ hasi = hitza.startswith ("es") #False
 Testu bat modu batean amaitzen den jakin nahi badugu, berriz, `endswith ()» erabil daiteke:
 
 ```python
-hitzak = "Python hizkuntza ona da"
+hitzak = "Python lengoaia ona da"
 acaba = palabra .endswith ("aje") #True
 acaba = palabra .startswith ("ajes") #False
 ```
