--- a/book_eu/01.md
+++ b/book_eu/01.md
@@ -1,23 +1,23 @@
 # Baldintzak
 
-Uneren batean, programek gauza bat edo beste egin behar dute, baldintza baten arabera. Adibidez, erabiltzaile batek datu oker bat sartzen badu, programa amaitu egingo da. Datu batek balio jakin bat badu, modu batera prozesatzen da, eta bestela, beste batera. Nola lortzen da portaera hori? Baldintzen bidez.
+Askotan, programek gauza bat edo beste egin behar dute, baldintza baten arabera. Adibidez, erabiltzaile batek datu oker bat sartzen badu, programa amaitu egingo da. Datu batek balio jakin bat badu, modu batera prozesatzen da, eta bestela, beste batera. Nola lortzen da portaera hori? Baldintzen bidez.
 
-Baldintzak programazio-egiturak dira, eta aukera ematen digute kode bat baldintza batzuk betetzen direnean bakarrik exekutatzeko.
+Baldintzak programazio egiturak dira, eta aukera ematen digute kode bat baldintza batzuk betetzen direnean bakarrik exekutatzeko.
 
 ## if
 
-Baldintza bat egiteko egiturarik sinpleena `ifi 'da, eta itxura hau du:
+Baldintza bat egiteko egiturarik sinpleena `if` da, eta itxura hau du:
 
 ```python
-if* baldintza*:
+if *baldintza*:
     *eragiketak*
     *eragiketak*
     *...*
 ```
 
-Ikus dezakezunez, baldintza batekin hasten da. Baldintza boolear batek itzultzen duen edozein adierazpen izan daiteke, hau da, `Trueu edo `Falseu, egiazkoa edo faltsua.
-Hala bada, bete egingo dira jarraibideak, eta, bestela, salto egingo da.
-Adibidez:
+Ikus dezakezunez, baldintza batekin hasten da. Baldintza **boolear batek itzultzen duen edozein adierazpen izan daiteke**, hau da, `True` ala `False`, egiazkoa ala faltsua. Hala bada, bete egingo dira jarraibideak, eta, bestela, salto egingo da.
+
+Adibidez, programa honek, balioa negatiboa bada, "Balioa 0 baino txikiagoa da" adieraziko du:
 
 ```python
 balioa = -2
@@ -53,11 +53,14 @@ Programaren amaiera
 ```
 
 Oharra:
-Oso garrantzitsua den zerbait ere kontuan hartu behar duzu: "ifi" aren barruko jarraibideak espazio batzuen edo tabulazio baten atzean daude. Python programazio-lengoaiaren berezitasun bat da hori: edozein bloketan, hala nola baldintza batean, begizta batean, funtzio batean, haren edukiak tabulatuta egon behar du. Modu horrek irakurketa errazten du eta programa baten egitura erraz ezagutzea ahalbidetzen du beste programatzaile batzuentzat. Baita zuretzat ere, zure programa bada.
+Oso garrantzitsua den zerbait ere kontuan hartu behar duzu: "if" aren barruko jarraibideak espazio batzuen edo tabulazio baten atzean daude. Python programazio lengoaiaren berezitasun bat da hori: edozein bloketan, hala nola baldintza batean, begizta batean, funtzio batean, haren edukiak tabulatuta egon behar du. Espazio horrek irakurketa errazten du eta programa baten egitura erraz ezagutzea ahalbidetzen du beste programatzaile batzuentzat. Baita zuretzat ere, zure programa bada.
 
-1.0 ariketa
+Programak konplexuagoak egiten diren heinean, baldintzak eta beste edozein kontrol egiturak kabiatuko ditugu, eta espazio horiekin programaren egitura jarraitzea erreztuko dugu.
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion eta negatiboa den egiaztatzen duen programa bat. So negatiboa da, mezu bat erakutsi behar duzu kontsola bidez.
+
+1.0 Ariketa
+
+Idatzi erabiltzaileari zenbaki bat eskatzen dion eta negatiboa den egiaztatzen duen programa bat. Beraz negatiboa da, mezu bat erakutsi behar duzu kontsola bidez.
 
 ```python
 balioa = input("Idatzi zenbaki bat: ")
@@ -75,11 +78,11 @@ Negatiboa da
 ```
 
 ## if else
-IFarekin bloke bat sor dezakegu, baldintza bat betetzen bada bakarrik exekutatzen dena. Baina zer gertatzen da programak baldintza baten arabera gauza bat edo bestea egitea nahi badugu?
-"Beste" aukera sartu ahal izateko, if-else egitura bat erabiltzen dugu:
+`if`arekin bloke bat sor dezakegu, baldintza bat betetzen bada bakarrik exekutatzen dena. Baina zer gertatzen da programak baldintza baten arabera gauza bat ala bestea egitea nahi badugu?
+"Beste" aukera sartu ahal izateko, `if-else` egitura bat erabiltzen dugu:
 
 ```python
-if* baldintza*:
+if *baldintza*:
     *eragiketak*
 else:
     *eragiketak*
@@ -89,7 +92,7 @@ Adibidez:
 
 ```python
 izena = input ("Esadazu zure izena:")
-if izena! = "":
+if izena != "":
     print ("Kaixo", izena)
 else:
     print ("Ez duzu ezer sartu!")
@@ -102,16 +105,16 @@ Esadazu zure izena: Ada
 Kaixo Ada
 ```
 
-Baina erabiltzaileak ezer idatzi gabe "jakin" sakatu besterik ez badu egiten:
+Baina erabiltzaileak ezer idatzi gabe `enter` tekla sakatu besterik ez badu egiten:
 
 ```console
 Esadazu zure izena:
 Ez duzu ezer sartu!
 ```
 
-1.1 ariketa
+1.1 Ariketa
 
-Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua "agurra" bada, agur bat adierazi behar duzu; bestela, "ez dut ulertzen" dioen mezu bat erakutsi behar duzu.
+Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua `"agurra" `bada, agur bat adierazi behar duzu; bestela, `"Ez dut ulertzen"` dioen mezu bat erakutsi behar duzu.
 
 ```python
 testua = input("Sartu testua: ")
@@ -131,12 +134,12 @@ Ez dut ulertzen.
 
 ## if elif else
 
-Bada beste aldaera bat hainbat baldintza egiaztatu behar ditugunean. Horretarako, if-elif-else egitura dago:
+Bada beste egitura bat hainbat baldintza egiaztatu behar ditugunean. Horretarako, if-elif-else egitura dago:
 
 ```python
-if *1 baldintza*:
+if *baldintza1*:
     *eragiketak*
-elif: *2 baldintza*:
+elif: *baldintza2*:
     *eragiketak*
 elif: *baldintza3*
     *eragiketak*
@@ -161,14 +164,14 @@ else:
 
 Behar adina `elif` izan ditzakegu.
 
-1.2 ariketa
+1.2 Ariketa
 
-Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua "bihar" bada, "Egun on" mezua erakutsi behar duzu, testua "berandu" bada, "Arratsalde on" mezua erakutsi behar duzu, eta, bestela, "Gabon" mezua erakutsi behar duzu.
+Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua `"goiza"` bada, `"Egun on"` mezua erakutsi behar duzu, testua `"arratsalde"` bada, `"Arratsalde on"` mezua erakutsi behar duzu, testua `"gau"` bada `"Gabon"` mezua erakutsi behar duzu eta, bestela `"Ez dut ulertzen"`.
 
 ```python
 testua = input("Idatzi testua: ")
 
-if testua == "bihar":
+if testua == "goiza":
     print("Egun on.")
 elif testua == "arratsalde":
     print("Arratsalde on.")
@@ -182,11 +185,11 @@ else:
 Emaitza:
 
 ```console
-Idatzi testu bat: arratsaldez
+Idatzi testu bat: arratsalde
 Arratsalde on.
 ```
 
-1.3 ariketa
+1.3 Ariketa
 
 Sortu programa bat erabiltzaileari bi balio oso eskatzeko, alderatzeko eta pantaila bidez erakusteko bat bestea baino handiagoa den edo berdinak diren.
 
@@ -212,16 +215,16 @@ Sartu beste zenbaki bat: 10
 
 ## Proposatutako ariketak
 
-1.0 ariketa
-Sortu programa bat erabiltzaileari bi balio oso eskatuko dizkiona eta pantaila bidez erakutsiko duena lehenengoa bigarrenaren multiploa den. Zenbaki bat bestearen multiploa den jakiteko, moduluaren eragiketa egin behar duzu ( % `u) haien artean: 0 bada, multiploa izango da.
+1.0 Ariketa
+Sortu programa bat erabiltzaileari bi balio oso eskatuko dizkiona non pantaila bidez erakutsiko duena lehenengoa bigarrenaren multiploa den. Zenbaki bat bestearen multiploa den jakiteko, moduluaren eragiketa egin behar duzu (`%`) haien artean: 0 bada, multiploa izango da.
 
 ```python
 balio1 = input("Sartu zenbaki bat: ")
 balio2 = input("Sartu beste zenbaki bat: ")
 
-resto = int(balio1) % int(balio2)
+ondarra = int(balio1) % int(balio2)
 
-if resto == 0:
+if ondarra == 0:
   print(balio1, " zenbakia ", balio2, " zenbakiaren bikoitza da.")
 else:
   print(balio1, " zenbakia ", balio2, " zenbakirik ez da bikoitza.")
@@ -237,7 +240,7 @@ Sartu beste zenbaki bat: 4
 
 1.1 ariketa
 
-Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egin hau: lehenik eta behin pantailan erakutsi behar du zenbakia negatiboa edo positiboa den. Gero, zenbakia positiboa bada, negatibo bihurtu behar du, eta negatiboa bada, positibo.
+Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta ondorengoa egin: lehenik eta behin pantailan erakutsi behar du zenbakia negatiboa edo positiboa den. Gero, zenbakia positiboa bada, negatibo bihurtu behar du, eta negatiboa bada, positibo.
 
 ```python
 zenbakia = input("Sartu zenbaki bat: ")
@@ -261,8 +264,9 @@ Sartu zenbaki bat: -6
 Bihurketa: 6
 ```
 
-1.3 ariketa
-Idatzi urteko hilabete bateko zenbakia eskatzen duen programa bat eta erakutsi zenbat egun dituen. Hilabete ezezagun bat sartuz gero, "Ez dakigu" mezua erakutsi.
+1.2 Ariketa
+
+Idatzi urteko hilabete baten izena eskatzen duen programa bat eta erakutsi zenbat egun dituen. Hilabete ezezagun bat sartuz gero, "Ez dakigu" mezua erakutsi.
 
 ```python
 hilabetea = input("Sartu urteko hilabete bat: ")
@@ -302,7 +306,9 @@ Sartu urteko hilabete bat: Ekaina
 30 egun
 ```
 
-1.3 ariketa
+Hobespena: saiatu programa motzago egiten `or` operadorerik erabiliz.
+
+1.3 Ariketa
 
 Sortu programa bat erabiltzaileari zenbaki oso bat eskatzen diona eta pantailan zenbaki hori bikoitia eta positiboa den erakusten duena. Bestela, negatiboa, bakoitia edo biak diren adierazi behar duzu.
 
@@ -329,11 +335,12 @@ Sartu zenbaki bat: -9
 
 1.4 ariketa
 
-Sortu programa bat erabiltzaileari kilotan duen pisua eta zentimetrotan duen altuera eskatzeko eta GMI kalkulatzeko (pisua/altuera); emaitza erakutsi behar du eta gero mezu bat erakutsi:
-GMI 16 baino txikiagoa bada, "Jan behar duzu" mezua agertuko da.
-GMI (> =) 16 eta 25 (<) artean badago, "Ondo zaude" mezua agertuko da.
-GMI 25 eta 30 artean badago (<), mezua agertuko da: "Gehiegizko pisua duzu".
-GMI 30 baino handiagoa bada, mezu hau agertuko da: "Obesitate-arazoa duzu".
+Sortu programa bat erabiltzaileari kilotan duen pisua eta zentimetrotan duen altuera eskatzeko eta GMI kalkulatzeko (pisua/(altuera ber 2)); emaitza erakutsi behar du eta gero mezu bat erakutsi:
+
+- GMI 16 baino txikiagoa bada, "Beharrezkoa da gehiago jatea" mezua agertuko da.
+- GMI (> =) 16 eta 25 (<) artean badago, "Ondo zaude" mezua agertuko da.
+- GMI 25 eta 30 artean badago (<), mezua agertuko da: "Gorputz gordinagoa duzu".
+- GMI 30 baino handiagoa bada, mezu hau agertuko da: "Obesitate arazoa duzu".
 
 ```python
 pisua = input("Sartu zure pisua: ")
@@ -367,13 +374,13 @@ Ondo zaude
 
 1.5 ariketa
 
-Sortu erabiltzaileari jokalari-dortsal bat eskatzen dion programa bat eta egin hau: egiaztatu zenbaki hori 0 eta 99 artean dagoela. Ez badago, programa errore-mezu batekin amaitu behar da. Zenbakia 0 eta 99 artekoa bada, programak testu bat erakutsi behar du dortsal bakoitzari dagokion posizioarekin:
+Sortu erabiltzaileari jokalari dortsal bat eskatzen dion programa bat eta ondorengoa egin: egiaztatu zenbaki hori 0 eta 99 artean dagoela. Ez badago, programa errore mezu batekin amaitu behar da. Zenbakia 0 eta 99 artekoa bada, programak testu bat erakutsi behar du dortsal bakoitzari dagokion posizioarekin:
 
-- Erabiltzaileak 1 tekleatu badu, testua "Atezaina" izango da
-- Erabiltzaileak 1 eta 5 artean tekleatu badu, testua "Defentsa" izango da.
-- Erabiltzaileak 6 eta 8 artean edo 11 tekleatu badu, testua "erdilaria" izango da.
-- Erabiltzaileak 9 tekleatu badu, testua "Aurrelaria" izango da.
-- Beste edozein aukeratarako, testua "Edozein" izango da.
+- Erabiltzaileak 1 tekleatu badu, testua `"Atezaina"` izango da
+- Erabiltzaileak 1 eta 5 artean tekleatu badu, testua `"Defentsa"` izango da.
+- Erabiltzaileak 6 eta 8 artean edo 11 tekleatu badu, testua `"Erdilaria"` izango da.
+- Erabiltzaileak 9 tekleatu badu, testua `"Aurrelaria"` izango da.
+- Beste edozein aukeratarako, testua `"Edozein"` izango da.
 
 ```python
 zenbakia = input("Sartu zenbakia: ")
@@ -381,15 +388,15 @@ zenbakia = int(zenbakia)
 
 if zenbakia >= 0 and zenbakia <= 99:
   if zenbakia == 1:
-      print("Atari gizona")
+      print("Atezaina")
   elif zenbakia >= 1 and zenbakia <= 5:
-      print("Defentsa jokalaria")
+      print("Defentsa")
   elif zenbakia >= 6 and zenbakia <= 8 or zenbakia == 11:
-      print("Erdilari jokalaria")
+      print("Erdilari")
   elif zenbakia == 9:
-      print("Aurrelari jokalaria")
+      print("Aurrelari")
   else:
-      print("Norbera")
+      print("Edozein")
 else:
     print("Errorea, zenbakia ez dago 0 eta 99 artean")
 ```
@@ -398,5 +405,5 @@ Emaitza:
 
 ```console
 Dortsala sartu: 11
-Erdilari jokalaria
+Erdilari
 ```
