--- a/book_eu/02.md
+++ b/book_eu/02.md
@@ -1,16 +1,18 @@
 # Begiztak
-Hasieran esan bezala, ordenagailuak oso tentelak dira. Esaten zaiena egiten dute. Baina, aldiz, gaitasun izugarriak eta pazientzia amaigabea dituzte. Ez zaie batere inportako behar adina aldiz edozer gauza egitea.
 
-Ordenagailu baten zeregin ohikoenetako bat jarraibide bat errepikatzea da. Hori begizta egituren bidez lor daitekeen zerbait da. Begizta ekintza errepikatu bat da. Oro har, begizta batek baldintza bat betetzen du exekutatzeko: baldintza horiek betetzen badira, orduan begizta horrek dituen aginduak exekutatuko dira.
+Hasieran esan bezala, ordenagailuak oso tentelak dira. Esaten zaiena egiten dute. Baina, aldiz, gaitasun izugarriak eta pazientzia amaigabea dauzkate. Ez zaie batere inporta behar adina aldiz edozer gauza egitea.
 
-Begizta bat ikus dezakezu, errusiar mendi bat bezala, non buelta batzuk ematen dituzun.
+Ordenagailu baten zeregin ohikoenetako bat agindu bat errepikatzea da. Hori begizta egituren bidez lor daitekeen zerbait da. Begizta ekintza errepikatu bat da. Oro har, begizta batek baldintza bat betetzen du exekutatzeko: baldintza horiek betetzen badira, orduan begizta horrek dituen aginduak exekutatuko dira.
+
+Begiztak errusiar mendiak bezalakoak dira, non buelta batzuk ematen dituzun.
 Jarraian, begizta mota desberdinak ikusiko ditugu.
 
 ## while begizta
-Baldintza bat betetzen den bitartean, "whilee" begizta exekutatu egiten da. Egitura oso sinplea du:
+
+Baldintza bat betetzen den bitartean, "while" begizta exekutatu egiten da. Egitura oso sinplea du:
 
 ```python
-while* baldintza*:
+while *baldintza*:
   *eragiketak*
 ```
 
@@ -32,11 +34,11 @@ Begiztaren barruan nago
 Begiztaren barruan nago
 ```
 
-Oharra: Kontuz! Konturatu al zara begiztaren barruan kontagailuari balio bat kentzen ari garela? Kontuz ez bagabiltza eta hori egitea ahazten badugu, kontagailuaren balioa ez litzateke inoiz aldatuko eta bukle infinitua sortuko genuke. Programa ez litzateke inoiz amaituko eta betiko trabatuta geratuko litzateke!
+Oharra: Kontuz! Konturatu al zara begiztaren barruan kontagailuari balio bat kentzen ari garela? Kontuz ez bagabiltza eta hori egitea ahazten badugu, kontagailuaren balioa ez litzateke inoiz aldatuko eta begizta infinitua sortuko genuke. Programa ez litzateke inoiz amaituko eta betiko trabatuta geratuko litzateke!
 
-2.0 ariketa
+2.0 Ariketa
 
-Sortu 0an hasitako kontagailu-aldagai bat definituko duen programa bat. Ondoren, idatzi while begizta bat. Kontagailua 5 baino txikiagoa den bitartean, erakutsi mezu hau: `Estoy en el bucle«eta gehitu» kontagailu 1.
+Sortu 0n hasitako kontagailu aldagai bat definituko duen programa. Ondoren, idatzi while begizta bat. Kontagailua 5 baino txikiagoa den bitartean, erakutsi mezu hau: `"Begizta barruan nago"` kontagailu 1.
 
 ```python
 kontagailua = 0
@@ -55,7 +57,7 @@ Begiztaren barruan nago
 Begiztaren barruan nago
 ```
 
-Ikus dezagun beste adibide bat. Hurrengo programak datu bat eskatzen dio erabiltzaileari begizta batean. Programa ez da begiztatik aterako erabiltzaileak hutsuneari buruzko beste datu bat sartzen ez duen bitartean:
+Ikus dezagun beste adibide bat. Hurrengo programak datu bat eskatzen dio erabiltzaileari begizta batean. Programa ez da begiztatik aterako erabiltzaileak datu hutsa sartzen duen bitartean:
 
 ```python
 izena = ""
@@ -65,7 +67,7 @@ while izena == "":
 print ("Kaixo", izena)
 ```
 
-2.1 ariketa
+2.1 Ariketa
 
 Idatzi erabiltzaileari bi zenbaki eskatzen dizkion programa bat. Lehenak bigarrena baino txikiagoa izan behar du. Begiztak bi zenbaki horien arteko tartean dauden zenbakiak erakutsi behar ditu.
 
@@ -84,8 +86,8 @@ while min < max:
 Emaitza:
 
 ```console
-Sartu gutxieneko bat: 3
-Sartu gehienez: 8
+Sartu minimo bat: 3
+Sartu maximo: 8
 3
 4
 5
@@ -95,10 +97,10 @@ Sartu gehienez: 8
 
 ## For begizta
 
-Begizta for ekintza bat errepikatzeko erabiltzen dugu. Baldintza bat baino gehiago, kontagailu moduko bat erabiltzen du:
+`for` begizta ekintza bat errepikatzeko erabiltzen dugu ere. Baldintza bat baino gehiago, kontagailu moduko bat erabiltzen du:
 
 ```python
-for* aldakorra* in* tartea*:
+for *aldagaia* in *tartea*:
   *eragiketak*
 ```
 
@@ -118,14 +120,14 @@ Kaixo
 Kaixo
 ```
 
-For begiztetan oso interesgarria den zerbait da `i 'aldagaiak, nahi dugun izena izan lezakeenak, begiztaren buelta bakoitzari dagokion balioa izango duela. Hobeto ikusteko, nahikoa da aurreko programa pixka bat aldatzea:
+For begiztetan oso interesgarria den zerbait da `i` aldagaiak dira, nahi dugun izena izan lezakeenak, begiztaren buelta bakoitzari dagokion balioa izango duena. Hobeto ikusteko, nahikoa da aurreko programa pixka bat aldatzea:
 
 ```python:
 for i in range (4):
   print ("Kaixo", i)
 ```
 
-Eta emaitza egiaztatu:
+Eta emaitzan ikusiko dugu nola `i` aldatzen den:
 
 ```console
 Kaixo 0
@@ -134,9 +136,9 @@ Kaixo 2
 Kaixo 3
 ```
 
-Hori baliagarria izan dakiguke programa askotan.
+Hori baliagarria izan daiteke programa askotan.
 
-2.2 ariketa
+2.2 Ariketa
 
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, 0tik 10era biderkatzeko taula erakusten duena.
 
@@ -146,7 +148,7 @@ balioa = int(balioa)
 
 for i in range(11):
     print(balioa,"x",i,"=",(balioa*i))
-    # Aukerak:
+    # Beste Aukerak:
     # print("%d x %d = %d" % (balioa, i, balioa * i))
 ```
 
@@ -160,9 +162,9 @@ Sartu zenbaki bat: 3
 ...
 ```
 
-2.3 ariketa
+2.3 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. 0 edo txikiagoa bada, zerbait handiagoa sartzeko adierazi behar duzu, eta bestela, "Python mola!" mezua erakutsi behar duzu pantailan, zenbakiak adierazten duen adina aldiz:
+Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. 0 edo txikiagoa bada, zerbait handiagoa sartzeko adierazi behar duzu, eta bestela, `"Python ondo dago!"` mezua erakutsi behar duzu pantailan, zenbakiak adierazten duen adina aldiz:
 
 ```python
 zenbakia = input("Sartu zenbaki bat: ")
@@ -179,18 +181,21 @@ Emaitza:
 
 ```console
 Sartu zenbaki bat: 3
-Python mola!
-Python mola!
-Python mola!
+Python ondo dago!
+Python ondo dago!
+Python ondo dago!
 ```
 
 ## Tartea aldatu
 
-Lehenetsita, "range (4)" 0tik 3ra bitarteko zerrenda itzultzen ari da, hau da: 0, 1, 2, 3. Lau elementu dira guztira eta, beraz, begiztak lau buelta emango ditu.
+Lehenetsita, `range (4)` 0tik 3ra bitarteko zerrenda itzultzen ari da, hau da: 0, 1, 2, 3. Lau elementu dira guztira eta, beraz, begiztak lau buelta emango ditu.
 
 Jakina, edozein maila mota sor daiteke. Ezer adierazten ez bada, tartea 0an hasten da. Baina bi zenbakiren arteko tartea adieraz daiteke:
+
+```python
 range (0, 4) # 0, 1, 2, 3
 range (2, 6) # 2, 3, 4, 5
+```
 
 Adibidez:
 
@@ -208,7 +213,7 @@ Kaixo 7
 Kaixo 8
 ```
 
-Hirugarren parametro bat ere adieraz daiteke, balio batetik bestera nola salto egiten den adierazteko. Adibidez, 2tik 2ra:
+Hirugarren parametro bat ere adieraz daiteke, balio batetik bestera nola egiten den jauzi adierazteko. Adibidez, 1tik 11ra, salto bikoitza emanez:
 
 ```python
 range (1, 11, 2) # 1, 3, 5, 7, 9
@@ -249,9 +254,9 @@ Hona hemen emaitza:
 1
 ```
 
-2.4 ariketa
+2.4 Ariketa
 
-Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, 0tik erabiltzaileak sartu duen zenbakira arteko zenbaki bikoiti guztiak erakutsi behar ditu. Erabili `formako 'begizta eta egin salto binaka.
+Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, erabiltzaileak sartu duen zenbakira arteko zenbaki bikoiti guztiak erakutsi behar ditu, 0tik hasieta Erabili `for` begizta eta egin salto binaka.
 
 ```python
 balioa = input("Sartu zenbaki bat: ")
@@ -280,7 +285,7 @@ for objektua in objektuak:
   print (objektuak)
 ```
 
-Begiztaren buelta bakoitzean, "objektu" aldagaiak balio bat hartuko du "objektu" zerrendatik, eta, beraz, emaitza hau izango da:
+Begiztaren buelta bakoitzean, `objektu` aldagaiak balio bat hartuko du `objektuak` izeneko zerrendatik, eta, beraz, emaitza hau izango da:
 
 ```console
 izarra
@@ -298,9 +303,9 @@ for izena in izenak:
   if izena = = "Ane":
     print ("Ane zerrendan dago")
 ```
-Programa horren arazoa da, nahiz eta `Aneere 'aurkitu, begiztak zerrendaren amaierara arte jarraituko duela. Zerrenda hori oso handia bada, gure programa ez da eraginkorra izango! Hasieran esan bezala, ordenagailuak oso tentelak dira. Gelditzeko esaten ez badiegu, aurrera jarraituko dute.
+Programa horren arazoa da, nahiz eta `Anee` aurkitu, begiztak zerrendaren amaierara arte jarraituko duela. Zerrenda hori oso handia bada, gure programa ez da eraginkorra izango! Hau da, denbora galtzen ibiliko da. Hasieran esan bezala, ordenagailuak oso tentelak dira. Gelditzeko esaten ez badiegu, aurrera jarraituko dute.
 
-Zorionez, begiztetan break jarraibidea erabil dezakegu, begizta bat-batean bukatzea lortuko duena:
+Zorionez, begiztetan `break` agindua erabil dezakegu, begizta bat-batean bukatzea lortuko duena:
 
 ```python
 izenak = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
@@ -310,9 +315,9 @@ for izena in izenak:
     break
 ```
 
-2.5 ariketa
+2.5 Ariketa
 
-Idatzi 3 zenbakidun zerrenda bat zehazten duen programa bat. Ondoren, sortu begizta for bat, zerrenda gainditu eta zenbakiak adierazten duen beste aldiz errepikatuko duena.
+Idatzi 3 zenbakidun zerrenda bat definitzen duen programa bat. Ondoren, sortu `for` begizta bat, zerrenda gainditu eta zenbakiak adierazten duen beste aldiz errepikatuko duena.
 
 ```python
 errepikatu = [3, 6, 2]
@@ -332,24 +337,24 @@ Python
 ...
 ```
 
-## Noiz erabili while edo for?
+## Noiz erabili `while` ala `for`?
 
 Biekin gauza bera egin zenezakeen arren, bakoitzak erabilera logikoagoa du.
 
-Begizta hau argi eta garbi erabiltzen da zerbait exekutatu nahi denean, ez gehiago, ez gutxiago. Edo, aurrerago ikusiko dugun bezala, datu-egiturak hasieratik amaierarainoko zerrendetan sartu nahi direnean.
+`for` begizta buelta kopuru zehatza exekutatu nahi denean erabiltzen da, ez gehiago, ez gutxiago. Edo, aurrerago ikusiko dugun bezala, datu-egiturak hasieratik amaierarainoko zerrendek kudeatu nahi direnean.
 
-Baldintzak oso zehatzak ez direnean erabil daiteke `whilee 'begizta. Adibidez, erabiltzaileak datu bat sartzea nahi badugu, begizta batean sar dezakegu. Begizta ez da amaituko erabiltzaileak datu on bat sartu arte (hori litzateke baldintza).
+`while` begiztak ordez, baldintzak oso zehatzak ez direnean erabil daiteke. Adibidez, erabiltzaileak datu bat sartzea nahi badugu, begizta batean sar dezakegu. Begizta ez da amaituko erabiltzaileak datu on bat sartu arte (hori litzateke baldintza).
 
 ## Proposatutako ariketak
 
-2.0 ariketa
+2.0 Ariketa
 
-Idatzi programa bat "whilee" begizta batekin, erabiltzaileari izen bat eskatzeko (adibidez, "Ada") eta "Kaixo Ada" izen hori agurtzeko. "Irten" testua sartuz gero, buklea amaitu egin behar da.
+Idatzi programa bat `while` begizta batekin, erabiltzaileari izen bat eskatzeko (adibidez, `"Ada"`) eta `"Kaixo Ada"` izen hori agurtzeko. `"irten"` testua sartuz gero, buklea amaitu egin behar da.
 
 ```python
 izena = ""
 
-while izena != "irtetzea":
+while izena != "irten":
     izena = input("Sartu izen bat: ")
     print("Kaixo", izena)
 
@@ -368,9 +373,9 @@ Sartu izen bat: salir
 Amaiera.
 ```
 
-2.1 ariketa
+2.1 Ariketa
 
-Idatzi programa bat, erabiltzaileari zenbaki bat eskatzen dion eta zenbakia 0 ez den bitartean amaitzen ez duen "whilee" begizta duena. Zenbakia sartu ondoren, agur bat erakutsi behar da zenbakiak adierazten duen beste aldiz. Zenbakia 0 baino txikiagoa bada, begizta "break" batekin amaitu behar da;
+Idatzi programa bat, erabiltzaileari zenbaki bat eskatzen dion eta zenbakia 0 ez den bitartean amaitzen ez duen `while` begizta duena. Zenbakia sartu ondoren, agur bat erakutsi behar da zenbakiak adierazten duen adina aldiz. Zenbakia 0 baino txikiagoa bada, begizta `break` batekin amaitu behar da;
 
 ```python
 balioa = ""
@@ -395,9 +400,9 @@ Kaixo
 Sartu zenbaki bat: -1
 ```
 
-2.2 ariketa
+2.2 Ariketa
 
-Sortu erabiltzaileari balio oso bat eskatzen dion programa bat, egiaztatu 0 baino handiagoa den eta, gainera, bikoitia den. Hala bada, bistaratu pantailan zenbakiaren balioa adina aldiz karaktere* Erabili `print ("*")
+Sortu erabiltzaileari balio oso bat eskatzen dion programa bat, egiaztatu 0 baino handiagoa den eta, gainera, bikoitia den. Hala bada, bistaratu pantailan `*` karakterea zenbakiaren balioa adina aldiz. Erabili `print ("*")`.
 Adibidez, 8 sartuz gero, hau erakutsiko du:
 
 ```console
@@ -428,15 +433,22 @@ Sartu zenbaki bat: 6
 *****
 ```
 
-2.3 ariketa
+2.3 Ariketa
 
-Sortu aurrekoaren antzeko proiektu bat, pare positiboak bakarrik onartu behar dituena, baina erakutsi behar duzun ildoak alderdi hau izan behar du:
+Sortu aurrekoaren antzeko programa bat, zenbaki bikoiti eta positiboak bakarrik onartu behar dituena. Sartutako zenbakiarekin `*-` testua pantailan agertu behar da, `*`rekin amaituta. Adibidez:
 
-2:
-6: 00-** -* -*
-Eta beti hemen amaitu behar da:
+8 zenbakia sartzen bada, hauxe erakutsiko da:
+
+```console
+*-*-*-*
+```
+
 Adibidez, 4 zenbakia sartzen badute:
-- -* -
+
+```console
+*-*-*
+```
+Programa:
 
 ```python
 zenbakia = input("Sartu zenbaki bat: ")
@@ -459,13 +471,14 @@ else:
 Emaitza:
 
 ```console
-Sartu zenbaki bat: 8
-- -* -* -* -*
+Sartu zenbaki bat: 10
+*-*-*-*-*-*
 ```
 
-2.4 ariketa
+2.4 Ariketa
 
-Erabiltzaileari zenbaki oso bat eskatzen dion programa bat sortzen du, eta balio hori erabiliz, «marraztu» egin behar du kontsolan «*» lauki bat.
+Erabiltzaileari zenbaki oso bat eskatzen dion programa bat sortu, eta balio hori erabiliz, lauki bat marraztu behar du pantailan `*` karakterea erabiliz.
+
 Adibidez, 4 sartuz gero, hau erakutsiko da:
 
 ```console
@@ -500,7 +513,7 @@ Sartu zenbaki bat: 2
 **
 ```
 
-2.5 ariketa
+2.5 Ariketa
 
 Sortu programa bat erabiltzaileari zenbaki oso bat eskatu eta haren faktoria kalkulatzeko. Adibidez, 5eko faktoria 5 x 4 x 3 x 2 x 1 = 120 izango litzateke.
 
@@ -528,7 +541,7 @@ Emaitza: 24
 
 2.6 ariketa
 
-Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egiaztatu zenbaki hori lehengusua den ala ez, hau da, berez edo 1egatik zatigarria den.
+Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egiaztatu zenbaki hori primoa den ala ez, hau da, bakarrik bere buruarekin edo 1egatik zatigarria den. Adibidez: 2, 3, 5, 7, 11, 13, 17,...
 
 ```python
 zenbakia = input("Sartu zenbaki bat: ")
@@ -561,9 +574,9 @@ Sartu zenbaki bat: 5
 5 lehengusua da.
 ```
 
-2.7 ariketa
+2.7 Ariketa
 
-Sortu 0tik 10era biderkatzeko taula guztiak erakusten dituen programa bat.
+Sortu 0tik 10era biderketa taula guztiak erakusten dituen programa bat.
 
 ```python
 for i in range(11):
